<resources>
    <string name="app_name">Packetron</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_udp_send_receive">UDP Send and Receive</string>
    <string name="my_ip">My IP</string>
    <string name="type_a_message">Type a message</string>
    <string name="send">Send</string>
    <string name="text_connect">Connect</string>

    <string name="text_disconnect">Disconnect</string>
    <string name="tcp_server">TCP Server</string>
    <string name="text_clear_responses">Clear Responses</string>
    <string name="text_address_and_port">address and port</string>
    <string name="packetron">Packetron</string>
    <string name="tcp_client">TCP Client</string>
    <string name="connection">Connection</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="tcp_server_show_sent">tcp_server_show_sent</string>
    <string name="tcp_server_in_buffer">tcp_server_in_buffer</string>
    <string name="tcp_client_show_sent">tcp_client_show_sent</string>
    <string name="tcp_client_in_buffer">tcp_client_in_buffer</string>
    <string name="_127_0_0_1_33333">127.0.0.1:33333</string>
    <string name="udp_send_from_server">udp_send_from_server</string>

    <string name="about_me_text">
        This App is made for testing UDP/TCP enabled devices, We are willing to always
        improve and implement new features, so we really appreciate you taking the time
        after using this app to write us a review including what you liked and what you
        didn\'t like about our app. Also feel free to ask for any missing features and we
        will take your request into consideration!
    </string>
    <string name="write_a_review_link"> <u>Write a Review!</u> </string>
    <string name="message_templates">Message Templates</string>
    <string name="add">Add</string>
    <string name="enter_a_message">Enter a Message</string>
    <string name="selected_message_template">selected_message_template</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="copy_text">Copy</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete_all">Delete All</string>
    <string name="save_this_conversation">Save this Conversation</string>
    <string name="show_saved_conversations">Show Saved Conversations</string>
    <string name="response_wait_ms">Response Wait (ms)</string>
    <string name="no_resend">No Resend</string>
    <string name="out_port">Out Port</string>
    <string name="resend_interval_ms">Resend Interval (ms)</string>
    <string name="hex">Hex</string>
    <string name="random">Random</string>
    <string name="no_wait">No Wait</string>
    <string name="stop_resends">Stop Resends</string>
    <string name="show_hex">Show Hex</string>
    <string name="response_wait_afh">Response wait in milliseconds</string>
    <string name="out_port_afh">Outbound Port Number</string>
    <string name="repeat_ms_afh">repeat interval in milliseconds</string>
    <string name="advanced">Advanced</string>
    <string name="resend_delay_ms">Resend delay ms</string>
    <string name="about_me">About Me</string>
    <string name="about">About</string>
    <!-- -->



</resources>
