<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/connection">
        <menu>
            <item
                android:id="@+id/nav_udp"
                android:icon="@drawable/ic_send_receive"
                android:title="@string/menu_udp_send_receive" />
            <item
                android:id="@+id/nav_tcp_server"
                android:icon="@drawable/ic_send"
                android:title="@string/tcp_server" />
            <item
                android:id="@+id/nav_tcp_client"
                android:icon="@drawable/ic_send"
                android:title="@string/tcp_client" />
        </menu>

    </item>

</menu>
