<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="5dp"
    tools:context=".ui.message_templates.SavedMessageActivity">

    <EditText
        android:background="@drawable/round_corner_rectangle"
        android:id="@+id/et_add_message_template"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:inputType="text"
        android:hint="@string/enter_a_message"
        android:minLines="3"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/bt_add_message_template"
        app:layout_constraintHorizontal_weight="5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/bt_add_message_template" />

    <Button
        android:id="@+id/bt_add_message_template"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/bt_cancel_message_template"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1.5"
        app:layout_constraintStart_toEndOf="@id/et_add_message_template"
        app:layout_constraintTop_toBottomOf="@id/message_templates_rv" />

    <Button
        android:id="@+id/bt_cancel_message_template"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1.5"
        app:layout_constraintStart_toEndOf="@id/et_add_message_template"
        app:layout_constraintTop_toBottomOf="@id/bt_add_message_template" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/message_templates_rv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/bt_add_message_template"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/message_template_recycleview_item"
        />

</androidx.constraintlayout.widget.ConstraintLayout>